--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,11 @@
-<h1>Hello World</h1>
+
+<a routerLink="/">Home</a> ----
+<a routerLink="/chats">Go to Chats</a>
 <router-outlet></router-outlet>
+
+<div>
+  <h4 id="forside">
+    Forside!!!
+  </h4>
+  <img src="src/assets/How-Do-Bots-Chatbots-Work.jpg">
+</div>
