--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,13 +1,48 @@
-<p>chat works!</p>
 
-<label>
-  Message:
-  <input type="text" [formControl]="message">
-</label>
+<div *ngIf="chatClient" id="messagebox" xmlns:ng-show="http://www.w3.org/1999/xhtml" xmlns:ng-show="http://www.w3.org/1999/xhtml">
+  <h5 id="hellouser">Hello {{chatClient.nickname}}</h5>
+  <h4 *ngFor="let chatMessage of messages" id="chatmessages">
+    {{chatMessage.sender.nickname}} -- {{chatMessage.message}}
+  </h4>
+  <div *ngIf="clientsTyping.length > 0 && chatClient">
+  <span>
+    users typing:
+  </span>
+    <span *ngFor="let client of clientsTyping; let i = index" id="UserTyping">
+    {{client.nickname}}<span *ngIf="clientsTyping.length - 1 > i">,</span>
+  </span>
+  </div>
+  <label>
+    Message:
+    <input type="text" [formControl]="messageFC">
+  </label>
 
-<button (click)="sendMessage()">Sent Message</button>
+  <button (click)="sendMessage()">Send Message</button>
 
 
-<h4 *ngFor="let message of messages">
-  {{message}}
-</h4>
+</div>
+<div *ngIf="!chatClient">
+  <label id="NicknameBox">
+    Enter Nickname:
+    <input type="text" [formControl]="nickNameFc" >
+  </label>
+  <button (click)="sendNickName()" class="btn btn-primary">Send</button>
+</div>
+<div *ngIf="error$ | async as error" class="alert alert-danger">
+  {{error}}
+</div>
+
+<div *ngIf="clients$ | async as clients" id="userOnline">
+  <h5>Current users online: {{clients.length}}</h5>
+  <ul>
+    <li *ngFor="let client of clients">
+      {{client.nickname}}
+    </li>
+  </ul>
+</div>
+
+
+
+
+
+
