--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
-
-<a routerLink="/">Home</a> ----
+<mat-toolbar color="accent">
+<a routerLink="/">Home</a> //
 <a routerLink="/chats">Go to Chats</a>
+  </mat-toolbar>
 <router-outlet></router-outlet>
 
 <div>
-  <h4 id="forside">
-    Forside!!!
+  <h4 id="frontpage">
+    Frontpage!!!
   </h4>
-  <img src="src/assets/How-Do-Bots-Chatbots-Work.jpg">
 </div>
