adding material stuff

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,4 +1,4 @@
-
+//material
 <div *ngIf="chatClient" id="messagebox" xmlns:ng-show="http://www.w3.org/1999/xhtml" xmlns:ng-show="http://www.w3.org/1999/xhtml">
   <h5 id="hellouser">Hello {{chatClient.nickname}}</h5>
   <h4 *ngFor="let chatMessage of messages" id="chatmessages">
