--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -29,7 +29,7 @@
     Enter Nickname:
     <input type="text" [formControl]="nickNameFc" >
   </label>
-  <button (click)="sendNickName()" class="btn btn-primary">Send</button>
+  <button (click)="sendNickName()" mat-raised-button color="accent">Send</button>
 </div>
 <div *ngIf="error$ | async as error" class="alert alert-danger">
   {{error}}
