--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,7 @@
-<mat-toolbar color="accent">
-<a routerLink="/">Home</a> //
-<a routerLink="/chats">Go to Chats</a>
-  </mat-toolbar>
-<router-outlet></router-outlet>
-
-<div>
-  <h4 id="frontpage">
-    Frontpage!!
-  </h4>
+<div class=container-fluid>
+<div class="row navbar-style">
+  <a routerLink="/">Home</a> //
+  <a routerLink="/chats">Go to Chats</a>
+</div>
+    <router-outlet></router-outlet>
 </div>
