--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,5 @@
-#frontpage {
-  font-size: 50px;
-  margin-left: 600px;
-  color: lightpink;
+.navbar-style {
+  position: absolute !important;
 }
 
 
