--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,10 +1,65 @@
-//boostrap
-<div *ngIf="chatClient" id="messagebox" xmlns:ng-show="http://www.w3.org/1999/xhtml" xmlns:ng-show="http://www.w3.org/1999/xhtml">
-  <h5 id="hellouser">Hello {{chatClient.nickname}}</h5>
-  <h4 *ngFor="let chatMessage of messages" id="chatmessages">
-    {{chatMessage.sender.nickname}} -- {{chatMessage.message}}
-  </h4>
-  <div *ngIf="clientsTyping.length > 0 && chatClient">
+
+<div class="row align-items-center justify-content-center vh-100" *ngIf="!chatClient">
+  <div class="card">
+    <div class="card-body">
+  <h1>Welcome Stranger</h1>
+      <form>
+        <div class="form-group">
+          <label for="nickNameFc" class="form-label">Enter Nickname:</label>
+          <input type="text" [formControl]="nickNameFc" id="nickNameFc" >
+        </div>
+        <div class="row justify-content-end">
+          <button type="button" (click)="sendNickName()" class="btn btn-primary">Send</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+
+
+<div *ngIf="error$ | async as error" class="alert alert-danger">
+  {{error}}
+</div>
+
+<div class="row vh-100" *ngIf="chatClient" style="padding-top: 35px; padding-bottom: 20px">
+  <div class="col-4">
+    <div class="card h-100">
+      <div class="card-header">
+        Clients Online
+      </div>
+      <div class="card-body">
+        <div *ngIf="clients$ | async as clients" id="userOnline">
+          <h5>Current users online: {{clients.length}}</h5>
+          <ul>
+            <li *ngFor="let client of clients">
+              {{client.nickname}}
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-8">
+    <div class="card h-100">
+      <div class="card-header">
+        <h5 id="hellouser">Hello {{chatClient.nickname}}</h5>
+      </div>
+      <div class="card-body">
+        <h6 *ngFor="let chatMessage of messages" id="chatmessages">
+          {{chatMessage.sender.nickname}} -- {{chatMessage.message}}
+        </h6>
+      </div>
+      <div class="card-footer">
+        <form class="form-inline">
+          <div class="input-group flex-fill">
+            <input type="text" class="form-control" [formControl]="messageFC" placeholder="Write message here..">
+            <button type="button" (click)="sendMessage()" class="btn btn-primary">Send Message</button>
+
+          </div>
+        </form>
+<div style="height: 10px">
+  <h5 *ngIf="clientsTyping.length > 0 && chatClient">
   <span>
     users typing:
   </span>
@@ -13,39 +68,11 @@
     {{client.nickname}}
       <span *ngIf="clientsTyping.length - 1 > i">, </span>
   </span>
+  </h5>
+</div>
+      </div>
+    </div>
   </div>
-
-  <label>
-    Message:
-    <input type="text" [formControl]="messageFC">
-  </label>
-
-  <button (click)="sendMessage()">Send Message</button>
-
-
 </div>
-<div *ngIf="!chatClient">
-  <label id="NicknameBox">
-    Enter Nickname:
-    <input type="text" [formControl]="nickNameFc" >
-  </label>
-  <button (click)="sendNickName()" class="btn btn-primary">Send</button>
-</div>
-<div *ngIf="error$ | async as error" class="alert alert-danger">
-  {{error}}
-</div>
-
-<div *ngIf="clients$ | async as clients" id="userOnline">
-  <h5>Current users online: {{clients.length}}</h5>
-  <ul>
-    <li *ngFor="let client of clients">
-      {{client.nickname}}
-    </li>
-  </ul>
-</div>
-
-
-
-
 
 
