--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -1,4 +1,4 @@
-body {
+/*body {
   font: 15px arial, sans-serif;
   background-color: #d9d9d9;
   padding-top: 15px;
@@ -74,4 +74,4 @@ color: Grey;
 
 #chatmessages {
 
-}
+}*/
