--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,8 @@
+<div fxLayout="column" fxFill>
+  <div fxLayout="row" fxLayoutGap="5px">
+    <a routerLink="/">Home</a>
+    <a routerLink="/chats">Go to Chats</a>
+  </div>
 
-<a routerLink="/">Home</a> //
-<a routerLink="/chats">Go to Chats</a>
-<router-outlet></router-outlet>
-
-<div>
-  <h4 id="frontpage">
-    Frontpage!!!
-  </h4>
+<router-outlet class="router-flex"></router-outlet>
 </div>
