--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import "./_variables.scss";
 
 
 html, body { height: 100%; }
@@ -9,3 +10,13 @@ router-outlet.router-flex + * {
   flex: 1 1 auto;
   flex-direction: column;
 }
+
+.primary-text-color {
+  color: $primary;
+}
+.accent-text-color {
+  color: $accent;
+}
+.warn-text-color {
+   color: $warn;
+ }
