--- a/src/app/stock/stock-create/stock-create.component.html
+++ b/src/app/stock/stock-create/stock-create.component.html
@@ -3,12 +3,12 @@
 
   <label>
     Name:
-    <input type="text" formcontrolName="name" id="name">
+    <input type="text" formControlName="name" id="name">
   </label>
 
   <label>
     Description:
-    <input type="text" formcontrolName="description">
+    <input type="text" formControlName="description">
   </label>
 
   <label>
