--- a/src/app/stock/stock.component.html
+++ b/src/app/stock/stock.component.html
@@ -1,1 +1,18 @@
-<p>stock works!</p>
+<mat-card-title>
+    Welcome to Stocks
+  </mat-card-title>
+    <mat-card-content>
+
+    </mat-card-content>
+
+          <button mat-button color="primary" routerLink="/stock/create">
+            Create Stock
+          </button>
+
+        <div>Cake A/S</div>
+        <div> Chili ApS</div>
+        <div>
+          {{allStocks}}
+          <p>Wine A/S</p>
+          <div>
+
