--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <div fxLayout="row" fxLayoutGap="5px">
     <a routerLink="/">Home</a>
     <a routerLink="/chats">Go to Chats</a>
+    <a routerLink="/stock">Go to Stocks</a>
   </div>
 
 <router-outlet class="router-flex"></router-outlet>
